# decky-wine-cellar

./: .gitignore  LICENSE  README.md  main.py  package.json  plugin.json  pnpm-lock.yaml  python  rollup.config.js
.github/: FUNDING.yml
.github/workflows/: build.yml  decky-cli-build.yml
backend/: Cargo.toml  Cross.toml  Dockerfile  build.sh  entrypoint.sh
backend/src/: binary_vdf_util.rs  github_util.rs  main.rs  multilogger.rs  steam.rs  steam_util.rs  vdf_util.rs  wine_cask.rs  wine_cellar.rs
backend/src/wine_cask/: app.rs  flavors.rs  install.rs  mod.rs  uninstall.rs  virtual.rs  wine_cask.rs
src/: SteamUtil.ts  WebSocket.ts  index.tsx  logger.ts  python_hook.tsx  toasts.ts  types.d.ts  types.ts
src/components/: Markdown.tsx  PortNumberTextField.tsx  changeLogModal.tsx  markdown.tsx  showQrModal.tsx
src/frontend/: About.tsx  CompatibilityToolFlavorTab.tsx  Manager.tsx  VirtualCompatibilityTools.tsx  about.tsx  flavorTab.tsx  games.tsx  index.tsx  manager.tsx
src/frontend/manage/: GitHubReleasesTab.tsx
src/utils/: logger.ts  pythonBackendHelper.ts  steamUtils.ts  toasts.ts
src/ws/: notifications.ts
