[package]
name = "wine-cask"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Logging deps
log = { version = "0.4.21", features = ["std"] }
chrono = "0.4.35"
# Websocket deps
reqwest = { version = "0.11.25", default-features = false, features = ["stream", "blocking", "rustls-tls"] }
tokio-tungstenite = { version = "0.21.0", features = ["rustls-tls-webpki-roots"] }
futures-channel = "0.3.30"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
bytes = "1.5.0"
futures-util = "0.3.30"
# Parsing/Extracting deps
keyvalues-parser = "0.2.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tar = "0.4.40"
flate2 = "1.0.28"
xz2 = "0.1.7"

byteorder = "1.5.0"

# External security related
rustls-webpki = "0.102.2"
time = "0.3.34"

[dev-dependencies]
tempfile = "3.10.1"

[profile.release]
opt-level = "z"
debug = false
strip = true
lto = true
codegen-units = 1