[package]
name = "wine-cask"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Logging deps
log = { version = "0.4.22", features = ["std"] }
chrono = "0.4.38"
# Websocket deps
reqwest = { version = "0.12.8", default-features = false, features = ["stream", "blocking", "rustls-tls"] }
tokio-tungstenite = { version = "0.24.0", features = ["rustls-tls-webpki-roots"] }
futures-channel = "0.3.31"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
bytes = "1.7.2"
futures-util = "0.3.31"
# Parsing/Extracting deps
keyvalues-parser = "0.2.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tar = "0.4.42"
flate2 = "1.0.34"
xz2 = "0.1.7"

# External security related
rustls-webpki = "0.102.8"
time = "0.3.36"

[dev-dependencies]
tempfile = "3.13.0"

[profile.release]
opt-level = "z"
debug = false
strip = true
lto = true
codegen-units = 1