[package]
name = "wine-cask"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Logging deps
log = { version = "0.4.28", features = ["std"] }
chrono = "0.4.42"
# Websocket deps
reqwest = { version = "0.12.24", default-features = false, features = ["stream", "blocking", "rustls-tls"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
futures-channel = "0.3.31"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
bytes = "1.10.0"
futures-util = "0.3.31"
# Parsing/Extracting deps
keyvalues-parser = "0.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tar = "0.4.44"
flate2 = "1.1.5"
xz2 = "0.1.7"

[dev-dependencies]
tempfile = "3.23.0"

[profile.release]
opt-level = "z"
debug = false
strip = true
lto = true
codegen-units = 1